Replaced sevenpack with bib

--- a/res/templates/list_blocks.html
+++ b/res/templates/list_blocks.html
@@ -2,15 +2,15 @@
 <h1>Blocks</h1>
 
 <!-- ###SPACER_BLOCK### start -->
-<tr><td colspan="2" class="tx_sevenpack-spacer_row">&nbsp;</td></tr>
+<tr><td colspan="2" class="tx_bib-spacer_row">&nbsp;</td></tr>
 <!-- ###SPACER_BLOCK### end -->
 
 
 <!-- ###YEAR_BLOCK### start -->
-<tr><td <!-- ###HAS_ENUM### begin -->colspan="2"<!-- ###HAS_ENUM### end --> class="tx_sevenpack-year_row">###YEAR###</td></tr>
+<tr><td <!-- ###HAS_ENUM### begin -->colspan="2"<!-- ###HAS_ENUM### end --> class="tx_bib-year_row">###YEAR###</td></tr>
 <!-- ###YEAR_BLOCK### end -->
 
 
 <!-- ###BIBTYPE_BLOCK### start -->
-<tr><th <!-- ###HAS_ENUM### begin -->colspan="2"<!-- ###HAS_ENUM### end --> class="tx_sevenpack-bibtype_row">###BIBTYPE###</th></tr>
+<tr><th <!-- ###HAS_ENUM### begin -->colspan="2"<!-- ###HAS_ENUM### end --> class="tx_bib-bibtype_row">###BIBTYPE###</th></tr>
 <!-- ###BIBTYPE_BLOCK### end -->
