--- a/res/templates/navi_pref.html
+++ b/res/templates/navi_pref.html
@@ -1,10 +1,10 @@
 
 <!-- ###PREF_NAVI_BLOCK### begin -->
-<div class="tx_sevenpack-navi_pref">
+<div class="tx_bib-navi_pref">
 ###FORM_START###
-<div class="tx_sevenpack-navi_main_label">###NAVI_LABEL###<span class="tx_sevenpack-navi_current">&nbsp;</span></div>
+<div class="tx_bib-navi_main_label">###NAVI_LABEL###<span class="tx_bib-navi_current">&nbsp;</span></div>
 ###IPP_SEL###  ###SHOW_KEYS### ###SHOW_ABSTRACTS### ###GO###
-<div class="tx_sevenpack-float_clear"></div>
+<div class="tx_bib-float_clear"></div>
 ###FORM_END###
 </div>
 <!-- ###PREF_NAVI_BLOCK### end -->
