--- a/res/templates/navi_search.html
+++ b/res/templates/navi_search.html
@@ -1,23 +1,23 @@
 
 <!-- ###SEARCH_NAVI_BLOCK### begin -->
-<div class="tx_sevenpack-navi_search">
+<div class="tx_bib-navi_search">
 ###FORM_START###
-<div class="tx_sevenpack-navi_main_label">###NAVI_LABEL###<span class="tx_sevenpack-navi_current">&nbsp;</span></div>
+<div class="tx_bib-navi_main_label">###NAVI_LABEL###<span class="tx_bib-navi_current">&nbsp;</span></div>
 ###SEARCH_BAR### ###EXTRA_BTN###
-<div class="tx_sevenpack-float_clear"></div>
+<div class="tx_bib-float_clear"></div>
 
 <!-- ###HAS_EXTRA### begin -->
-<div class="tx_sevenpack-navi_extra_row">
-<div class="tx_sevenpack-navi_search_details">
+<div class="tx_bib-navi_extra_row">
+<div class="tx_bib-navi_search_details">
 ###SEPARATOR_SEL### ###RULE_SEL###
 </div>
-<div class="tx_sevenpack-float_clear"></div>
+<div class="tx_bib-float_clear"></div>
 </div>
-<div class="tx_sevenpack-navi_extra_row">
-<div class="tx_sevenpack-navi_search_details">
+<div class="tx_bib-navi_extra_row">
+<div class="tx_bib-navi_search_details">
 ###ABSTRACTS_BTN### ###FULL_TEXT_BTN###
 </div>
-<div class="tx_sevenpack-float_clear"></div>
+<div class="tx_bib-float_clear"></div>
 </div>
 <!-- ###HAS_EXTRA### end -->
 ###FORM_END###
