--- a/res/templates/navi_stat.html
+++ b/res/templates/navi_stat.html
@@ -1,8 +1,8 @@
 
 <!-- ###STAT_NAVI_BLOCK### begin -->
-<div class="tx_sevenpack-navi_statistic">
-<div class="tx_sevenpack-navi_main_label">###NAVI_LABEL###</div>
+<div class="tx_bib-navi_statistic">
+<div class="tx_bib-navi_main_label">###NAVI_LABEL###</div>
 ###STATISTIC###
-<div class="tx_sevenpack-float_clear"></div>
+<div class="tx_bib-float_clear"></div>
 </div>
 <!-- ###STAT_NAVI_BLOCK### end -->
