--- a/res/templates/single_view.html
+++ b/res/templates/single_view.html
@@ -5,7 +5,7 @@
 
 
 <!-- ###SINGLE_VIEW### -->
-<div class="tx_sevenpack-single_view" >
+<div class="tx_bib-single_view" >
 
 ###SINGLE_VIEW_TITLE###
 
@@ -17,222 +17,222 @@
 <!-- ###HAS_BIBTYPE### end -->
 
 
-<table class="tx_sevenpack-single_item">
+<table class="tx_bib-single_item">
 <tbody>
 
 <!-- ###HAS_TITLE### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_TITLE###</th>
-<td class="tx_sevenpack-single_value">###TITLE###</td>
+<th class="tx_bib-single_label">###FL_TITLE###</th>
+<td class="tx_bib-single_value">###TITLE###</td>
 </tr>
 <!-- ###HAS_TITLE### end -->
 
 <!-- ###HAS_AUTHORS### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_AUTHORS###</th>
-<td class="tx_sevenpack-single_value">###AUTHORS###</td>
+<th class="tx_bib-single_label">###FL_AUTHORS###</th>
+<td class="tx_bib-single_value">###AUTHORS###</td>
 </tr>
 <!-- ###HAS_AUTHORS### end -->
 
 <!-- ###HAS_JOURNAL### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_JOURNAL###</th>
-<td class="tx_sevenpack-single_value">###JOURNAL###</td>
+<th class="tx_bib-single_label">###FL_JOURNAL###</th>
+<td class="tx_bib-single_value">###JOURNAL###</td>
 </tr>
 <!-- ###HAS_JOURNAL### end -->
 
 <!-- ###HAS_EDITOR### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_EDITOR###</th>
-<td class="tx_sevenpack-single_value">###EDITOR###</td>
+<th class="tx_bib-single_label">###FL_EDITOR###</th>
+<td class="tx_bib-single_value">###EDITOR###</td>
 </tr>
 <!-- ###HAS_EDITOR### end -->
 
 
 <!-- ###HAS_TYPE### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_TYPE###</th>
-<td class="tx_sevenpack-single_value">###TYPE###</td>
+<th class="tx_bib-single_label">###FL_TYPE###</th>
+<td class="tx_bib-single_value">###TYPE###</td>
 </tr>
 <!-- ###HAS_TYPE### end -->
 
 <!-- ###HAS_YEAR### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_YEAR###</th>
-<td class="tx_sevenpack-single_value">###YEAR###</td>
+<th class="tx_bib-single_label">###FL_YEAR###</th>
+<td class="tx_bib-single_value">###YEAR###</td>
 </tr>
 <!-- ###HAS_YEAR### end -->
 <!-- ###HAS_MONTH### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_MONTH###</th>
-<td class="tx_sevenpack-single_value">###MONTH###</td>
+<th class="tx_bib-single_label">###FL_MONTH###</th>
+<td class="tx_bib-single_value">###MONTH###</td>
 </tr>
 <!-- ###HAS_MONTH### end -->
 <!-- ###HAS_DAY### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_DAY###</th>
-<td class="tx_sevenpack-single_value">###DAY###</td>
+<th class="tx_bib-single_label">###FL_DAY###</th>
+<td class="tx_bib-single_value">###DAY###</td>
 </tr>
 <!-- ###HAS_DAY### end -->
 
 <!-- ###HAS_BOOKTITLE### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_BOOKTITLE###</th>
-<td class="tx_sevenpack-single_value">###BOOKTITLE###</td>
+<th class="tx_bib-single_label">###FL_BOOKTITLE###</th>
+<td class="tx_bib-single_value">###BOOKTITLE###</td>
 </tr>
 <!-- ###HAS_BOOKTITLE### end -->
 
 <!-- ###HAS_VOLUME### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_VOLUME###</th>
-<td class="tx_sevenpack-single_value">###VOLUME###</td>
+<th class="tx_bib-single_label">###FL_VOLUME###</th>
+<td class="tx_bib-single_value">###VOLUME###</td>
 </tr>
 <!-- ###HAS_VOLUME### end -->
 
 <!-- ###HAS_NUMBER### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_NUMBER###</th>
-<td class="tx_sevenpack-single_value">###NUMBER###</td>
+<th class="tx_bib-single_label">###FL_NUMBER###</th>
+<td class="tx_bib-single_value">###NUMBER###</td>
 </tr>
 <!-- ###HAS_NUMBER### end -->
 
 <!-- ###HAS_NUMBER2### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_NUMBER2###</th>
-<td class="tx_sevenpack-single_value">###NUMBER2###</td>
+<th class="tx_bib-single_label">###FL_NUMBER2###</th>
+<td class="tx_bib-single_value">###NUMBER2###</td>
 </tr>
 <!-- ###HAS_NUMBER2### end -->
 
 <!-- ###HAS_SERIES### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_SERIES###</th>
-<td class="tx_sevenpack-single_value">###SERIES###</td>
+<th class="tx_bib-single_label">###FL_SERIES###</th>
+<td class="tx_bib-single_value">###SERIES###</td>
 </tr>
 <!-- ###HAS_SERIES### end -->
 
 <!-- ###HAS_EDITION### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_EDITION###</th>
-<td class="tx_sevenpack-single_value">###EDITION###</td>
+<th class="tx_bib-single_label">###FL_EDITION###</th>
+<td class="tx_bib-single_value">###EDITION###</td>
 </tr>
 <!-- ###HAS_EDITION### end -->
 
 <!-- ###HAS_CHAPTER### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_CHAPTER###</th>
-<td class="tx_sevenpack-single_value">###CHAPTER###</td>
+<th class="tx_bib-single_label">###FL_CHAPTER###</th>
+<td class="tx_bib-single_value">###CHAPTER###</td>
 </tr>
 <!-- ###HAS_CHAPTER### end -->
 
 <!-- ###HAS_PAGES### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_PAGES###</th>
-<td class="tx_sevenpack-single_value">###PAGES###</td>
+<th class="tx_bib-single_label">###FL_PAGES###</th>
+<td class="tx_bib-single_value">###PAGES###</td>
 </tr>
 <!-- ###HAS_PAGES### end -->
 
 <!-- ###HAS_PUBLISHER### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_PUBLISHER###</th>
-<td class="tx_sevenpack-single_value">###PUBLISHER###</td>
+<th class="tx_bib-single_label">###FL_PUBLISHER###</th>
+<td class="tx_bib-single_value">###PUBLISHER###</td>
 </tr>
 <!-- ###HAS_PUBLISHER### end -->
 
 <!-- ###HAS_ADDRESS### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_ADDRESS###</th>
-<td class="tx_sevenpack-single_value">###ADDRESS###</td>
+<th class="tx_bib-single_label">###FL_ADDRESS###</th>
+<td class="tx_bib-single_value">###ADDRESS###</td>
 </tr>
 <!-- ###HAS_ADDRESS### end -->
 
 <!-- ###HAS_INSTITUTION### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_INSTITUTION###</th>
-<td class="tx_sevenpack-single_value">###INSTITUTION###</td>
+<th class="tx_bib-single_label">###FL_INSTITUTION###</th>
+<td class="tx_bib-single_value">###INSTITUTION###</td>
 </tr>
 <!-- ###HAS_INSTITUTION### end -->
 
 <!-- ###HAS_ORGANIZATION### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_ORGANIZATION###</th>
-<td class="tx_sevenpack-single_value">###ORGANIZATION###</td>
+<th class="tx_bib-single_label">###FL_ORGANIZATION###</th>
+<td class="tx_bib-single_value">###ORGANIZATION###</td>
 </tr>
 <!-- ###HAS_ORGANIZATION### end -->
 
 <!-- ###HAS_SCHOOL### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_SCHOOL###</th>
-<td class="tx_sevenpack-single_value">###SCHOOL###</td>
+<th class="tx_bib-single_label">###FL_SCHOOL###</th>
+<td class="tx_bib-single_value">###SCHOOL###</td>
 </tr>
 <!-- ###HAS_SCHOOL### end -->
 
 <!-- ###HAS_INSTITUTE### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_INSTITUTE###</th>
-<td class="tx_sevenpack-single_value">###INSTITUTE###</td>
+<th class="tx_bib-single_label">###FL_INSTITUTE###</th>
+<td class="tx_bib-single_value">###INSTITUTE###</td>
 </tr>
 <!-- ###HAS_INSTITUTE### end -->
 
 <!-- ###HAS_EVENT_NAME### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_EVENT_NAME###</th>
-<td class="tx_sevenpack-single_value">###EVENT_NAME###</td>
+<th class="tx_bib-single_label">###FL_EVENT_NAME###</th>
+<td class="tx_bib-single_value">###EVENT_NAME###</td>
 </tr>
 <!-- ###HAS_EVENT_NAME### end -->
 
 <!-- ###HAS_EVENT_PLACE### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_EVENT_PLACE###</th>
-<td class="tx_sevenpack-single_value">###EVENT_PLACE###</td>
+<th class="tx_bib-single_label">###FL_EVENT_PLACE###</th>
+<td class="tx_bib-single_value">###EVENT_PLACE###</td>
 </tr>
 <!-- ###HAS_EVENT_PLACE### end -->
 
 <!-- ###HAS_EVENT_DATE### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_EVENT_DATE###</th>
-<td class="tx_sevenpack-single_value">###EVENT_DATE###</td>
+<th class="tx_bib-single_label">###FL_EVENT_DATE###</th>
+<td class="tx_bib-single_value">###EVENT_DATE###</td>
 </tr>
 <!-- ###HAS_EVENT_DATE### end -->
 
 <!-- ###HAS_HOWPUBLISHED### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_HOWPUBLISHED###</th>
-<td class="tx_sevenpack-single_value">###HOWPUBLISHED###</td>
+<th class="tx_bib-single_label">###FL_HOWPUBLISHED###</th>
+<td class="tx_bib-single_value">###HOWPUBLISHED###</td>
 </tr>
 <!-- ###HAS_HOWPUBLISHED### end -->
 
 <!-- ###HAS_AFFILIATION### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_AFFILIATION###</th>
-<td class="tx_sevenpack-single_value">###AFFILIATION###</td>
+<th class="tx_bib-single_label">###FL_AFFILIATION###</th>
+<td class="tx_bib-single_value">###AFFILIATION###</td>
 </tr>
 <!-- ###HAS_AFFILIATION### end -->
 
 <!-- ###HAS_EXTERN### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_EXTERN###</th>
-<td class="tx_sevenpack-single_value">###EXTERN###</td>
+<th class="tx_bib-single_label">###FL_EXTERN###</th>
+<td class="tx_bib-single_value">###EXTERN###</td>
 </tr>
 <!-- ###HAS_EXTERN### end -->
 
 <!-- ###HAS_MISC### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_MISC###</th>
-<td class="tx_sevenpack-single_value">###MISC###</td>
+<th class="tx_bib-single_label">###FL_MISC###</th>
+<td class="tx_bib-single_value">###MISC###</td>
 </tr>
 <!-- ###HAS_MISC### end -->
 
 <!-- ###HAS_MISC2### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_MISC2###</th>
-<td class="tx_sevenpack-single_value">###MISC2###</td>
+<th class="tx_bib-single_label">###FL_MISC2###</th>
+<td class="tx_bib-single_value">###MISC2###</td>
 </tr>
 <!-- ###HAS_MISC2### end -->
 
 <!-- ###HAS_STATE### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_STATE###</th>
-<td class="tx_sevenpack-single_value">###STATE###</td>
+<th class="tx_bib-single_label">###FL_STATE###</th>
+<td class="tx_bib-single_value">###STATE###</td>
 </tr>
 <!-- ###HAS_STATE### end -->
 
@@ -240,107 +240,107 @@
 
 <!-- ###HAS_REVIEWED### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_REVIEWED###</th>
-<td class="tx_sevenpack-single_value">###REVIEWED###</td>
+<th class="tx_bib-single_label">###FL_REVIEWED###</th>
+<td class="tx_bib-single_value">###REVIEWED###</td>
 </tr>
 <!-- ###HAS_REVIEWED### end -->
 
 <!-- ###HAS_IN_LIBRARY### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_IN_LIBRARY###</th>
-<td class="tx_sevenpack-single_value">###IN_LIBRARY###</td>
+<th class="tx_bib-single_label">###FL_IN_LIBRARY###</th>
+<td class="tx_bib-single_value">###IN_LIBRARY###</td>
 </tr>
 <!-- ###HAS_IN_LIBRARY### end -->
 
 <!-- ###HAS_BORROWED_BY### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_BORROWED_BY###</th>
-<td class="tx_sevenpack-single_value">###BORROWED_BY###</td>
+<th class="tx_bib-single_label">###FL_BORROWED_BY###</th>
+<td class="tx_bib-single_value">###BORROWED_BY###</td>
 </tr>
 <!-- ###HAS_BORROWED_BY### end -->
 
 
 <!-- ###HAS_CITEID### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_CITEID###</th>
-<td class="tx_sevenpack-single_value">###CITEID###</td>
+<th class="tx_bib-single_label">###FL_CITEID###</th>
+<td class="tx_bib-single_value">###CITEID###</td>
 </tr>
 <!-- ###HAS_CITEID### end -->
 
 <!-- ###HAS_DOI### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_DOI###</th>
-<td class="tx_sevenpack-single_value">###DOI###</td>
+<th class="tx_bib-single_label">###FL_DOI###</th>
+<td class="tx_bib-single_value">###DOI###</td>
 </tr>
 <!-- ###HAS_DOI### end -->
 
 <!-- ###HAS_ISBN### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_ISBN###</th>
-<td class="tx_sevenpack-single_value">###ISBN###</td>
+<th class="tx_bib-single_label">###FL_ISBN###</th>
+<td class="tx_bib-single_value">###ISBN###</td>
 </tr>
 <!-- ###HAS_ISBN### end -->
 
 <!-- ###HAS_ISSN### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_ISSN###</th>
-<td class="tx_sevenpack-single_value">###ISSN###</td>
+<th class="tx_bib-single_label">###FL_ISSN###</th>
+<td class="tx_bib-single_value">###ISSN###</td>
 </tr>
 <!-- ###HAS_ISSN### end -->
 
 <!-- ###HAS_FILE_URL### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_FILE_URL###</th>
-<td class="tx_sevenpack-single_value">###FILE_URL###</td>
+<th class="tx_bib-single_label">###FL_FILE_URL###</th>
+<td class="tx_bib-single_value">###FILE_URL###</td>
 </tr>
 <!-- ###HAS_FILE_URL### end -->
 
 <!-- ###HAS_WEB_URL### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_WEB_URL###</th>
-<td class="tx_sevenpack-single_value">###WEB_URL###</td>
+<th class="tx_bib-single_label">###FL_WEB_URL###</th>
+<td class="tx_bib-single_value">###WEB_URL###</td>
 </tr>
 <!-- ###HAS_WEB_URL### end -->
 
 <!-- ###HAS_WEB_URL2### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_WEB_URL2###</th>
-<td class="tx_sevenpack-single_value">###WEB_URL2###</td>
+<th class="tx_bib-single_label">###FL_WEB_URL2###</th>
+<td class="tx_bib-single_value">###WEB_URL2###</td>
 </tr>
 <!-- ###HAS_WEB_URL2### end -->
 
 <!-- ###HAS_KEYWORDS### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_KEYWORDS###</th>
-<td class="tx_sevenpack-single_value">###KEYWORDS###</td>
+<th class="tx_bib-single_label">###FL_KEYWORDS###</th>
+<td class="tx_bib-single_value">###KEYWORDS###</td>
 </tr>
 <!-- ###HAS_KEYWORDS### end -->
 
 <!-- ###HAS_TAGS### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_TAGS###</th>
-<td class="tx_sevenpack-single_value">###TAGS###</td>
+<th class="tx_bib-single_label">###FL_TAGS###</th>
+<td class="tx_bib-single_value">###TAGS###</td>
 </tr>
 <!-- ###HAS_TAGS### end -->
 
 <!-- ###HAS_ABSTRACT### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_ABSTRACT###</th>
-<td class="tx_sevenpack-single_value">###ABSTRACT###</td>
+<th class="tx_bib-single_label">###FL_ABSTRACT###</th>
+<td class="tx_bib-single_value">###ABSTRACT###</td>
 </tr>
 <!-- ###HAS_ABSTRACT### end -->
 
 <!-- ###HAS_ANNOTATION### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_ANNOTATION###</th>
-<td class="tx_sevenpack-single_value">###ANNOTATION###</td>
+<th class="tx_bib-single_label">###FL_ANNOTATION###</th>
+<td class="tx_bib-single_value">###ANNOTATION###</td>
 </tr>
 <!-- ###HAS_ANNOTATION### end -->
 
 <!-- ###HAS_NOTE### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_NOTE###</th>
-<td class="tx_sevenpack-single_value">###NOTE###</td>
+<th class="tx_bib-single_label">###FL_NOTE###</th>
+<td class="tx_bib-single_value">###NOTE###</td>
 </tr>
 <!-- ###HAS_NOTE### end -->
 
@@ -348,15 +348,15 @@
 
 <!-- ###HAS_PID### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_PID###</th>
-<td class="tx_sevenpack-single_value">###PID###</td>
+<th class="tx_bib-single_label">###FL_PID###</th>
+<td class="tx_bib-single_value">###PID###</td>
 </tr>
 <!-- ###HAS_PID### end -->
 
 <!-- ###HAS_UID### begin -->
 <tr>
-<th class="tx_sevenpack-single_label">###FL_UID###</th>
-<td class="tx_sevenpack-single_value">###UID###</td>
+<th class="tx_bib-single_label">###FL_UID###</th>
+<td class="tx_bib-single_value">###UID###</td>
 </tr>
 <!-- ###HAS_UID### end -->
 
