--- a/res/templates/main.html
+++ b/res/templates/main.html
@@ -3,7 +3,7 @@
 
 <!-- ###LIST_VIEW### begin -->
 <!-- ###HAS_TOP_NAVI### begin -->
-<div class="tx_sevenpack-top_navigation">
+<div class="tx_bib-top_navigation">
 <!-- ###HAS_NEW_ENTRY### begin -->###NEW_ENTRY###<!-- ###HAS_NEW_ENTRY### end -->
 <!-- ###HAS_SEARCH_NAVI### begin -->###SEARCH_NAVI_TOP###<!-- ###HAS_SEARCH_NAVI### end -->
 <!-- ###HAS_YEAR_NAVI### begin -->###YEAR_NAVI_TOP###<!-- ###HAS_YEAR_NAVI### end -->
@@ -13,19 +13,19 @@
 </div>
 <!-- ###HAS_TOP_NAVI### end -->
 <!-- ###HAS_PAGE_NAVI### begin -->###PAGE_NAVI_TOP###<!-- ###HAS_PAGE_NAVI### end -->
-<div class="tx_sevenpack-navi_main_label">###LABEL_REFERENCES###</div>
-<div class="tx_sevenpack-list_container">
+<div class="tx_bib-navi_main_label">###LABEL_REFERENCES###</div>
+<div class="tx_bib-list_container">
 <!-- ###HAS_ITEMS### begin -->
-<table cellspacing="0" cellpadding="0" border="0" class="tx_sevenpack-list">
+<table cellspacing="0" cellpadding="0" border="0" class="tx_bib-list">
 <tbody>
 ###ITEMS###
 </tbody>
 </table>
-<div class="tx_sevenpack-float_clear"></div>
+<div class="tx_bib-float_clear"></div>
 <!-- ###HAS_ITEMS### end -->
 ###NO_ITEMS###
 </div>
-<div class="tx_sevenpack-bottom_navigation">
+<div class="tx_bib-bottom_navigation">
 <!-- ###HAS_PAGE_NAVI### begin -->###PAGE_NAVI_BOTTOM###<!-- ###HAS_PAGE_NAVI### end -->
 <!-- ###HAS_STAT_NAVI### begin -->###STAT_NAVI_BOTTOM###<!-- ###HAS_STAT_NAVI### end -->
 <!-- ###HAS_IMPORT### begin -->###IMPORT###<!-- ###HAS_IMPORT### end -->
