--- a/Resources/Private/Templates/Navigation/Page.html
+++ b/Resources/Private/Templates/Navigation/Page.html
@@ -1,8 +1,5 @@
-
-<!-- ###PAGE_NAVI_BLOCK### begin -->
 <div class="tx_bib-navi_page">
-<div class="tx_bib-navi_main_label">###NAVI_LABEL### <span class="tx_bib-navi_current">&nbsp;</span></div>
-<div class="tx_bib-navi_page_selection">###NAVI_BACKWARDS### ###SELECTION### ###NAVI_FORWARDS###</div>
-<div class="tx_bib-float_clear"></div>
+	<div class="tx_bib-navi_main_label">{label} <span class="tx_bib-navi_current">&nbsp;</span></div>
+	<div class="tx_bib-navi_page_selection">{backward -> f:format.raw()} {selection -> f:format.raw()} {forward -> f:format.raw()}</div>
+	<div class="tx_bib-float_clear"></div>
 </div>
-<!-- ###PAGE_NAVI_BLOCK### end -->
