--- a/Resources/Private/Templates/Navigation/Preference.html
+++ b/Resources/Private/Templates/Navigation/Preference.html
@@ -1,10 +1,13 @@
 
 <!-- ###PREF_NAVI_BLOCK### begin -->
 <div class="tx_bib-navi_pref">
-###FORM_START###
-<div class="tx_bib-navi_main_label">###NAVI_LABEL###<span class="tx_bib-navi_current">&nbsp;</span></div>
-###IPP_SEL###  ###SHOW_KEYS### ###SHOW_ABSTRACTS### ###GO###
-<div class="tx_bib-float_clear"></div>
-###FORM_END###
+	{formStart -> f:format.raw()}
+		<div class="tx_bib-navi_main_label">{label}<span class="tx_bib-navi_current">&nbsp;</span></div>
+		{itemsPerPageSelection -> f:format.raw()}
+		{showKeywords -> f:format.raw()}
+		{showAbstracts -> f:format.raw()}
+		{goButton -> f:format.raw()}
+		<div class="tx_bib-float_clear"></div>
+	</form>
 </div>
 <!-- ###PREF_NAVI_BLOCK### end -->
