--- a/Resources/Private/Templates/Navigation/Author.html
+++ b/Resources/Private/Templates/Navigation/Author.html
@@ -1,14 +1,13 @@
-
-<!-- ###AUTHOR_NAVI_BLOCK### begin -->
 <div class="tx_bib-navi_author">
-<div class="tx_bib-navi_main_label">###NAVI_LABEL### <span class="tx_bib-navi_current">&nbsp;</span></div>
-<div class="tx_bib-navi_author_letters">###LETTER_SELECTION###<span class="tx_bib-navi_current">&nbsp;</span></div>
-<div class="tx_bib-float_clear"></div>
+	<div class="tx_bib-navi_main_label">{label} <span class="tx_bib-navi_current">&nbsp;</span></div>
+	<div class="tx_bib-navi_author_letters">{letterSelection -> f:format.raw()}<span class="tx_bib-navi_current">&nbsp;</span></div>
+	<div class="tx_bib-float_clear"></div>
 </div>
 
 <div class="tx_bib-navi_extra_row">
-<div class="tx_bib-navi_author_selection">###SELECTION###<span class="tx_bib-navi_current">&nbsp;</span></div>
-<div class="tx_bib-navi_author_select">###SURNAME_SELECT###<div class="tx_bib-float_clear"></div></div>
-<div class="tx_bib-float_clear"></div>
+	<div class="tx_bib-navi_author_selection">{selection -> f:format.raw()}<span class="tx_bib-navi_current">&nbsp;</span></div>
+	<div class="tx_bib-navi_author_select">{surnameSelection -> f:format.raw()}
+		<div class="tx_bib-float_clear"></div>
+	</div>
+	<div class="tx_bib-float_clear"></div>
 </div>
-<!-- ###AUTHOR_NAVI_BLOCK### end -->
