Fluid template for year navigation

--- a/Resources/Private/Templates/Navigation/Year.html
+++ b/Resources/Private/Templates/Navigation/Year.html
@@ -1,9 +1,6 @@
-
-<!-- ###YEAR_NAVI_BLOCK### begin -->
 <div class="tx_bib-navi_year">
-<div class="tx_bib-navi_main_label">###NAVI_LABEL### <span class="tx_bib-navi_current">&nbsp;</span></div>
-<div class="tx_bib-navi_year_selection">###SELECTION###</div>
-<div class="tx_bib-navi_year_select">###SELECT_FORM###</div>
-<div class="tx_bib-float_clear"></div>
+	<div class="tx_bib-navi_main_label">{label -> f:format.raw()} <span class="tx_bib-navi_current">&nbsp;</span></div>
+	<div class="tx_bib-navi_year_selection">{selection -> f:format.raw()}</div>
+	<div class="tx_bib-navi_year_select">{selectForm -> f:format.raw()}</div>
+	<div class="tx_bib-float_clear"></div>
 </div>
-<!-- ###YEAR_NAVI_BLOCK### end -->
