--- a/Resources/Private/Templates/Navigation/Search.html
+++ b/Resources/Private/Templates/Navigation/Search.html
@@ -1,25 +1,25 @@
-
-<!-- ###SEARCH_NAVI_BLOCK### begin -->
 <div class="tx_bib-navi_search">
-###FORM_START###
-<div class="tx_bib-navi_main_label">###NAVI_LABEL###<span class="tx_bib-navi_current">&nbsp;</span></div>
-###SEARCH_BAR### ###EXTRA_BTN###
-<div class="tx_bib-float_clear"></div>
+	{formStart -> f:format.raw()}
+	<div class="tx_bib-navi_main_label">{label}<span class="tx_bib-navi_current">&nbsp;</span></div>
+	{searchBar -> f:format.raw()}
+	{extraButton -> f:format.raw()}
+	<div class="tx_bib-float_clear"></div>
 
-<!-- ###HAS_EXTRA### begin -->
-<div class="tx_bib-navi_extra_row">
-<div class="tx_bib-navi_search_details">
-###SEPARATOR_SEL### ###RULE_SEL###
+	<f:if condition="{advancedSearch}">
+		<div class="tx_bib-navi_extra_row">
+			<div class="tx_bib-navi_search_details">
+				{separatorSelection -> f:format.raw()}
+				{ruleSelection -> f:format.raw()}
+			</div>
+			<div class="tx_bib-float_clear"></div>
+		</div>
+		<div class="tx_bib-navi_extra_row">
+			<div class="tx_bib-navi_search_details">
+				{abstractsButton -> f:format.raw()}
+				{fullTextButton -> f:format.raw()}
+			</div>
+			<div class="tx_bib-float_clear"></div>
+		</div>
+	</f:if>
+	{formEnd -> f:format.raw()}
 </div>
-<div class="tx_bib-float_clear"></div>
-</div>
-<div class="tx_bib-navi_extra_row">
-<div class="tx_bib-navi_search_details">
-###ABSTRACTS_BTN### ###FULL_TEXT_BTN###
-</div>
-<div class="tx_bib-float_clear"></div>
-</div>
-<!-- ###HAS_EXTRA### end -->
-###FORM_END###
-</div>
-<!-- ###SEARCH_NAVI_BLOCK### end -->
