--- a/Resources/Private/Templates/Navigation/Statistics.html
+++ b/Resources/Private/Templates/Navigation/Statistics.html
@@ -1,8 +1,5 @@
-
-<!-- ###STAT_NAVI_BLOCK### begin -->
 <div class="tx_bib-navi_statistic">
-<div class="tx_bib-navi_main_label">###NAVI_LABEL###</div>
-###STATISTIC###
-<div class="tx_bib-float_clear"></div>
+	<div class="tx_bib-navi_main_label">{label}</div>
+	{statistics -> f:format.raw()}
+	<div class="tx_bib-float_clear"></div>
 </div>
-<!-- ###STAT_NAVI_BLOCK### end -->
