[TASK] ADWD-1554 Update information texts in importer

--- a/Resources/Private/Templates/Importer/BibTexInformation.html
+++ b/Resources/Private/Templates/Importer/BibTexInformation.html
@@ -4,15 +4,9 @@
 
 <ul>
 	<li>
-		The BibTeX format is not strictly defined anywhere.
-		Therefore this parser merely tries to get the best out of it. <br/>
-		If in doubt try it on an empty storage folder first.
+		<f:translate key="import_bibtex_text.0"/>
 	</li>
 	<li>
-		Non ASCII characters should be encoded in TeX syntax (e.g. \\"u for &uuml;)<br/>
-		Everything else may cause unexpected behaviour.
-	</li>
-	<li>
-		@String( var = "some text" ) placeholders are not supported
+		<f:translate key="LLL:EXT:bib/pi1/locallang:xml:import_bibtex_text.1"/>
 	</li>
 </ul>
