Add missing labels for BibTeX import

--- a/Resources/Private/Templates/Importer/BibTexInformation.html
+++ b/Resources/Private/Templates/Importer/BibTexInformation.html
@@ -4,9 +4,9 @@
 
 <ul>
 	<li>
-		<f:translate key="import_bibtex_text.0"/>
+		<f:translate key="import_bibtex_text.0" extensionName="bib"/>
 	</li>
 	<li>
-		<f:translate key="LLL:EXT:bib/pi1/locallang:xml:import_bibtex_text.1"/>
+		<f:translate key="import_bibtex_text.1" extensionName="bib"/>
 	</li>
 </ul>
