--- a/Resources/Private/Partials/Editor/Buttons.html
+++ b/Resources/Private/Partials/Editor/Buttons.html
@@ -1,7 +1,14 @@
-{saveButton}
-{editButton}
-  <f:form.button class="tx_bib-editor_button"><a href=""><f:translate key="editor_btn_cancel" extensionName="bib" /></a></f:form.button>
+<div class="tx_bib-editor_button_box">
+<span class="tx_bib-box_right">
+{deleteButton}
+</span>
+<span class="tx_bib-box_left">
+    {saveButton}
+    {editButton}
+      <f:form.button class="tx_bib-editor_button"><a href=""><f:translate key="editor_btn_cancel" extensionName="bib" /></a></f:form.button>
 
-  <f:if condition="{mode} == 1">
-      <f:form.button class="tx_bib-editor_button" onclick="window.open('/typo3conf/ext/bib/Resources/Public/Html/Syntax.html'); return false;">{f:translate(key:'editor_btn_syntax_help',extensionName:'bib')}</f:form.button>
-  </f:if>
+      <f:if condition="{mode} == 1">
+          <f:form.button class="tx_bib-editor_button" onclick="window.open('/typo3conf/ext/bib/Resources/Public/Html/Syntax.html'); return false;">{f:translate(key:'editor_btn_syntax_help',extensionName:'bib')}</f:form.button>
+      </f:if>
+</span>
+</div>
