--- a/Resources/Private/Templates/Editor/Index.html
+++ b/Resources/Private/Templates/Editor/Index.html
@@ -18,18 +18,13 @@
 
     </script>
 
-    <div class="{prefixShort}-editor">
-
-    <div class="{prefixShort}-editor_button_box">
-    <span class="{prefixShort}-box_right">
-    {deleteButton}
-    </span>
-    <span class="{prefixShort}-box_left">
+    <div class="tx_bib-editor">
         <f:render partial="Editor/Buttons" arguments="{_all}" />
-    </span>
-    </div>
+        {preContent -> f:format.raw()}
+        {content -> f:format.raw()}
+        <f:render partial="Editor/Buttons" arguments="{_all}" />
 
+    </div>
 </f:form>
 
-{preContent -> f:format.raw()}
-{content -> f:format.raw()}
+
